--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.5",
+        "aos": "^2.3.4",
         "react-fast-marquee": "^1.6.5",
         "react-google-recaptcha": "^3.1.0",
         "react-google-recaptcha-v3": "^1.10.1",
