--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:57UCHUeXM2uOtlXQZ2YUwUl4CrfKMTZ/1Huh1iuyi38=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://tv-servies.local
+APP_URL=http://wintvservice.in
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
